--- a/src/KD/CoreBundle/Resources/views/QCM/creation.html.twig
+++ b/src/KD/CoreBundle/Resources/views/QCM/creation.html.twig
@@ -6,25 +6,29 @@
 {% block main %}
     <div class="row">
         {# liste des question à ajouter #}
-        <div class="col-md-6">
+        <div class="col-md-7">
             <h1>Questions</h1>
-            
-            <table class="table">
+            <input type="text" id="filtre" class="form-control"  placeholder="Filtrer..."><br>
+            <table class="table" >
                 <tr>
+                    <th>Theme</th>
                     <th>Question</th>
                     <th colspan="2">Action</th>
                 </tr>
+                <tbody id="aFiltrer">
                 {% for question in listQuestions %} 
                     <tr>
-                        <td id="text-{{question.id}}">{{ question.texte }}</td>
+                        <td>{{ question.theme.nom }}</td>
+                        <td id="text-{{question.id}}">{{ question.getTexteShort() }}</td>
                         <td>{% include '@KDCore/Includes/HTML/question_modal_link.html.twig' with {'question': question} only %}</td>
                         <td><a href="#" id="toggle-{{question.id}}" class="toggle-question" title="Ajouter"><i class="fas fa-plus fa-lg"></i></a></td>
                     </tr>
                 {% endfor %} 
+                </tbody>
             </table>
         </div>
         {# Le formulaire du QCM #}
-        <div class="col-md-6">
+        <div class="col-md-5">
             <h1>QCM</h1>
         
             <form action="{{ path('create_qcm_add') }}" method="post">
@@ -57,7 +61,8 @@
          * Ajoute ou enlève une question du QCM, en fonction de l'état du lien.
          * Inverse l'état du lien.
          */
-        $(".toggle-question").click(function(){
+        $(".toggle-question").click(function()
+        {
             var id = $(this).attr('id').replace('toggle-','');
             
             if($(this).attr("title") == "Ajouter"){
@@ -77,8 +82,8 @@
                 $(this).attr("title","Ajouter");
                 $(this).html('<i class="fas fa-plus fa-lg"></i>');
             }
-        });
+        });   
     </script>
-    
+    {% include '@KDCore/Includes/JS/table_filter.js.twig' %}
     {% include '@KDCore/Includes/JS/question_modal.js.twig' %}
 {%endblock%}
