--- a/src/KD/CoreBundle/Resources/views/Eleve/index.html.twig
+++ b/src/KD/CoreBundle/Resources/views/Eleve/index.html.twig
@@ -11,7 +11,7 @@
     <table class="table">
         <tr>
             <th>Titre</th>
-            <th>Deadline</th>
+            <th>Date limite</th>
             <th>Repondre</th>
         </tr>
         {% for qcm in todoQCMs %}
