--- a/src/KD/CoreBundle/Resources/views/QCM/index.html.twig
+++ b/src/KD/CoreBundle/Resources/views/QCM/index.html.twig
@@ -12,7 +12,7 @@
     <table class="table">
         <tr>
             <th>Titre</th>
-            <th>Deadline</th>
+            <th>Date limite</th>
             <th>Etat</th>
             <th>Résultats</th>
             <th colspan="2">Action</th>
