--- a/src/KD/CoreBundle/Resources/views/Includes/HTML/user_modal_link.html.twig
+++ b/src/KD/CoreBundle/Resources/views/Includes/HTML/user_modal_link.html.twig
@@ -4,8 +4,7 @@
     #}
 
 {# Ce lien permet d'afficher le modal et le mettre à jour avec une fiche utilisateur#}
-<a class="text-dark" 
-   href="#app_modal" 
+<a href="#app_modal" 
    data-toggle="modal" 
    onclick="userModal(
                '{{ user.username }}',
