--- a/src/KD/CoreBundle/Resources/views/Question/creation.html.twig
+++ b/src/KD/CoreBundle/Resources/views/Question/creation.html.twig
@@ -24,7 +24,7 @@
             <select class="form-control" name="theme">
                 {% for theme in listThemes %}
                     <option 
-                        {%if editing and theme == question.theme %}selected{%endif%}
+                        {%if selectedTheme!=null and theme == selectedTheme %}selected{%endif%}
                         value="{{ theme.id }}">
                         {{ theme.nom }}
                     </option>
