--- a/src/KD/CoreBundle/Resources/views/Includes/HTML/theme_modal_link.html.twig
+++ b/src/KD/CoreBundle/Resources/views/Includes/HTML/theme_modal_link.html.twig
@@ -8,8 +8,7 @@
    data-toggle="modal" 
    onclick="themeModal(
                '{{ theme.nom }}',
-               '{{ theme.id }}',
-               '{{ path("themes_edit") }}'
+               '{{ theme.id }}'
                )" 
    title="Modifier">
     <i class="fas fa-edit fa-lg"></i>
