--- a/src/KD/CoreBundle/Resources/views/QCM/creation.html.twig
+++ b/src/KD/CoreBundle/Resources/views/QCM/creation.html.twig
@@ -7,25 +7,36 @@
     <div class="row">
         {# liste des question à ajouter #}
         <div class="col-md-7">
-            <h1>Questions</h1>
+            <h1>Choix des questions</h1>
+            
+            <div class='container mb-1'>
+                <p class="collapse text-faded" id="legende">
+                    <i class="fas fa-eye"></i> : Voir le détail de la question<br>
+                    <i class="fas fa-plus"></i> : Ajouter la question au QCM<br>
+                    <i class="fas fa-minus"></i> : Retirer la question du QCM  
+                </p>
+            </div> 
+            
             <input type="text" id="filtre" class="form-control"  placeholder="Filtrer..."><br>
-            <table class="table" >
-                <tr>
-                    <th>Theme</th>
-                    <th>Question</th>
-                    <th colspan="2">Action</th>
-                </tr>
-                <tbody id="aFiltrer">
-                {% for question in listQuestions %} 
-                    <tr>
-                        <td>{{ question.theme.nom }}</td>
-                        <td id="text-{{question.id}}">{{ question.getTexteShort() }}</td>
-                        <td>{% include '@KDCore/Includes/HTML/question_modal_link.html.twig' with {'question': question} only %}</td>
-                        <td><a href="#" id="toggle-{{question.id}}" class="toggle-question" title="Ajouter"><i class="fas fa-plus fa-lg"></i></a></td>
-                    </tr>
-                {% endfor %} 
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table table-striped" >
+                    <thead>
+                        <th>Theme</th>
+                        <th>Question</th>
+                        <th colspan="2"><a data-toggle="collapse" href="#legende" role="button">Action <i>?</i></a></th>
+                    </thead>
+                    <tbody id="aFiltrer">
+                    {% for question in listQuestions %} 
+                        <tr>
+                            <td>{{ question.theme.nom }}</td>
+                            <td id="text-{{question.id}}">{{ question.getTexteShort() }}</td>
+                            <td>{% include '@KDCore/Includes/HTML/question_modal_link.html.twig' with {'question': question} only %}</td>
+                            <td><a href="#" onClick="return false;" id="toggle-{{question.id}}" class="toggle-question" title="Ajouter"><i class="fas fa-plus fa-lg"></i></a></td>
+                        </tr>
+                    {% endfor %} 
+                    </tbody>
+                </table>
+            </div>
         </div>
         {# Le formulaire du QCM #}
         <div class="col-md-5">
