--- a/src/KD/CoreBundle/Resources/views/QCM/index.html.twig
+++ b/src/KD/CoreBundle/Resources/views/QCM/index.html.twig
@@ -8,59 +8,72 @@
             <a href="{{ path('create_qcm') }}" title="Créer un QCM"><i class="fas fa-plus-circle"></i></a>
         </small>
     </h1>
+    <div class='container mb-1'>
+        <p class="collapse text-faded" id="legende">
+            <i class="fas fa-plus-circle"></i> : Créer un QCM<br>
+            <i class="fas fa-eye"></i> : Voir le détail d'un QCM<br>
+            <i class="fas fa-clipboard-list"></i> : Voir les résultats d'un QCM<br>
+            <i class="fas fa-trash-alt"></i> : Supprimer un QCM<sup>1</sup><br>
+            <small><i>1: Possible uniquement si le QCM n'est pas encore disponible aux élèves (Etat 'Nouveau')</i></small>
+        </p>
+    </div> 
     <input type="text" id="filtre" class="form-control"  placeholder="Filtrer..."><br>
-    <table class="table">
-        <tr>
-            <th>Titre</th>
-            <th>Date limite</th>
-            <th>Etat</th>
-            <th>Résultats</th>
-            <th colspan="2">Action</th>
-        </tr>
-        
-        <tbody id="aFiltrer">
-        {% for qcm in listQCM %} 
-            <tr>
-                <td>{{ qcm.titre }}</td>
-                <td>{{ qcm.deadline|date('d/m/Y') }}</td>
-                <td>{{ qcm.printEtat() }}</td>
-                <td>
-                    {% if qcm.notes|length == 0 %}
-                        <i>Pas de notes</i>
-                    {% else %}
-                        <a href="{{ path('resultat_qcm',{'id_qcm':qcm.id}) }}" title="Voir les résultats"><i class="fas fa-clipboard-list fa-lg"></i></a>
-                    {% endif %}
-                </td>
-                <td>
-                    {% include '@KDCore/Includes/HTML/qcm_modal_link.html.twig' with {'qcm': qcm} only %}
-                    
-                    {%if qcm.etat == "NEW"%}
-                        <a href="{{ path("qcm_remove",{"id":qcm.id}) }}" title="Supprimer"><i class="fas fa-trash-alt fa-lg"></i></a>
-                    {%endif%}
-                </td>
-                <td>
-                    {%if qcm.etat != "PUBLIC"%}
-                        <a href="{{ path('qcm_change_etat',{"id":qcm.id}) }}">  
-                            {% if qcm.etat == "NEW" %}
-                                Mettre à disposition des élèves
-                            {% elseif qcm.etat == "OPEN"%}  
-                                Cloturer
-                            {% elseif qcm.etat == "CLOSED"%} 
-                                Publier les résultats
-                            {% endif %}
-                        </a>
-                    {%endif%}
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+                <th>Titre</th>
+                <th>Date limite</th>
+                <th>Etat</th>
+                <th>Résultats</th>
+                <th colspan="2"><a data-toggle="collapse" href="#legende" role="button">Action <i>?</i></a></th>
+            </thead>
 
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>  
-       
+            <tbody id="aFiltrer">
+            {% for qcm in listQCM %} 
+                <tr>
+                    <td>{{ qcm.titre }}</td>
+                    <td>{{ qcm.deadline|date('d/m/Y') }}</td>
+                    <td>{{ qcm.printEtat() }}</td>
+                    <td>
+                        {% if qcm.notes|length == 0 %}
+                            <i>Pas de notes</i>
+                        {% else %}
+                            <a href="{{ path('resultat_qcm',{'id_qcm':qcm.id}) }}" title="Voir les résultats"><i class="fas fa-clipboard-list fa-lg"></i></a>
+                        {% endif %}
+                    </td>
+                    <td>
+                        {% include '@KDCore/Includes/HTML/qcm_modal_link.html.twig' with {'qcm': qcm} only %}
+
+                        {%if qcm.etat == "NEW"%}
+                            <a href="{{ path("qcm_remove",{"id":qcm.id}) }}" title="Supprimer"><i class="fas fa-trash-alt fa-lg"></i></a>
+                        {%endif%}
+                    </td>
+                    <td>
+                        {%if qcm.etat != "PUBLIC"%}
+                            <a href="{{ path('qcm_change_etat',{"id":qcm.id}) }}"  
+                                {% if qcm.etat == "NEW" %}
+                                    onclick="return confirm_dialog('Les élèves pourront remplir ce QCM.')">Mettre à disposition des élèves
+                                {% elseif qcm.etat == "OPEN"%}  
+                                    onclick="return confirm_dialog('Les élèves ne pourront plus remplir ce QCM.')">Cloturer
+                                {% elseif qcm.etat == "CLOSED"%} 
+                                    onclick="return confirm_dialog('Les élèves pourront consulter leur résultats.')">Publier les résultats
+                                {% else%}    
+                                    >
+                                {% endif %}
+                            </a>
+                        {%endif%}
+
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>  
+    </div>  
     {% include '@KDCore/Includes/HTML/modal.html.twig' %}
 {% endblock %}
 
 {% block js %}
+    {% include '@KDCore/Includes/JS/confirm_dialog.js.twig' %}
     {% include '@KDCore/Includes/JS/table_filter.js.twig' %}
     {% include '@KDCore/Includes/JS/qcm_modal.js.twig' %}
 {% endblock %}
