--- a/src/KD/CoreBundle/Resources/views/Resultat/qcm.html.twig
+++ b/src/KD/CoreBundle/Resources/views/Resultat/qcm.html.twig
@@ -3,22 +3,44 @@
 
 {% block title %} - Résultats - {{ qcm.titre }}{% endblock %}
 {% block main %}
+    {% set scoreMax = qcm.getScoreMax()%}
+    
     <h1>{{ qcm.titre }}</h1>
-    <h2>{{ notes|length }} notes enregistrées</h2>
-        <table class="table">
-            <tr>
+    <p>
+        <b>Moyenne: {{stats.noteMoy|number_format(2)}}/{{scoreMax}}</b><br>
+        <b>Mote la plus basse: {{stats.noteMin}}/{{scoreMax}}</b><br>
+        <b>Note la plus haute: {{stats.noteMax}}/{{scoreMax}}</b><br>
+        <i>{{ notes|length }} notes enregistrées</i>
+        
+    </p>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
                 <th>Eleve</th>
                 <th>Score</th>
-                <th>Action</th>
-            </tr>
+                <th>Voir le détail</th>
+            </thead>
+            <tbody>
+
             {% for note in notes %}
                 <tr>
                     <td>{% include '@KDCore/Includes/HTML/user_modal_link.html.twig' with {'user': note.eleve} only %}</td>
-                    <td>{{ note.valeur }}/{{ qcm.getScoreMax()}}</td>
+                    <td>{{ note.valeur }}/{{scoreMax}}</td>
                     <td><a href="{{ path('resultat_qcm_detail_eleve', { 'id_qcm': qcm.id,'id_eleve':note.eleve.id}) }}" title="Voir détail"><i class="fas fa-eye fa-lg"></i></a></td>
                 </tr>
             {% endfor%}
+            {%if elevesSansNotes|length > 0%}
+                {% for eleve in elevesSansNotes %}
+                <tr>
+                    <td>{% include '@KDCore/Includes/HTML/user_modal_link.html.twig' with {'user': eleve} only %}</td>
+                    <td colspan="2"><i>N'a pas répondu</i></td>
+                </tr>
+                {% endfor %}
+            {%endif%}
+            </tbody>
         </table>
+    </div>   
+    
             
     {% include '@KDCore/Includes/HTML/modal.html.twig' %}
 {% endblock %}
