--- a/src/KD/CoreBundle/Resources/views/Themes/index.html.twig
+++ b/src/KD/CoreBundle/Resources/views/Themes/index.html.twig
@@ -5,23 +5,36 @@
 {% block main %}
     <h1>Thèmes</h1>
     
-        <form class="form-inline" action="{{ path('themes_add') }}" method="post">
-            <input type="text" class="form-control" name="nom" placeholder="Nouveau thème">
-            <input type="submit" class="btn btn-primary m-1" value="Ajouter un thème">           
-        </form>
-
-        <table class="table">
-            <tr>
+    <div class='container'>
+        <p class="collapse text-faded" id="legende">
+            <i class="fas fa-eye"></i> : Voir les questions d'un thème<br>
+            <i class="fas fa-edit"></i> : Modifier le nom d'un thème<br>
+            <i class="fas fa-plus-circle"></i> : Créer une question dans le thème choisi<br>
+            <i class="fas fa-trash-alt"></i> : Supprimer un thème<sup>1</sup><br>
+            <small><i>1: Possible uniquement si il n'y a pas de questions dans le thème</i></small>
+        </p>
+    </div>
+    
+    <form class="form-inline" action="{{ path('themes_add') }}" method="post">
+        <input type="text" class="form-control" name="nom" placeholder="Nouveau thème">
+        <input type="submit" class="btn btn-primary m-1" value="Ajouter un thème">           
+    </form>
+    
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
                 <th>Thème</th>
                 <th>Nombre de questions</th>
-                <th>Action</th>
-            </tr>
+                <th><a data-toggle="collapse" href="#legende" role="button">Action <i>?</i></a></th>
+            </thead>
+            <tbody>
             {% for theme in listThemes %}
                 <tr>
                     <td> {{ theme.nom }} </td>
                     <td> {{ theme.nb }} </td>
                     <td> 
                         {% include '@KDCore/Includes/HTML/theme_modal_link.html.twig' with {'theme': theme} only %}
+                        <a href="{{path("create_question_with_theme",{'id_theme':theme.id})}}" title="Créer une question"><i class="fas fa-plus-circle fa-lg"></i></a>
                         {% if theme.nb == 0 %}
                             <a href="{{path("themes_remove",{'id':theme.id})}}" title="Supprimer"><i class="fas fa-trash-alt fa-lg"></i></a>
                         {% else %}
@@ -30,11 +43,13 @@
                     </td>
                 </tr>   
             {% endfor %}
+            </tbody>
         </table>
-        
+    </div>   
     {% include '@KDCore/Includes/HTML/modal.html.twig' %}
 {% endblock %}
 
 {% block js %}
+
     {% include '@KDCore/Includes/JS/theme_modal.js.twig' %}
 {% endblock %}
